fix overflow text

--- a/app/assets/stylesheets/movie_show.sass
+++ b/app/assets/stylesheets/movie_show.sass
@@ -55,7 +55,7 @@
         font-size: 16px
         color: #777777
         text-align: center
-        padding: 0 12px
+        padding: 0 8px
 
       li.rating
         padding-left: 0
